2004-01-23  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/obstack, modules/xstrtol:
	Depend on exitfail.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/setenv: Depend on allocsa instead of alloca.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/xallocsa: New file.
	* MODULES.html.sh (func_all_modules): Add xallocsa.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/allocsa: New file.
	* MODULES.html.sh (func_all_modules): Add allocsa.

2004-01-20  Bruno Haible  <bruno@clisp.org>

	* modules/eealloc: New file.
	* MODULES.html.sh (func_all_modules): Add eealloc.

2004-01-15  Paul Eggert  <eggert@twinsun.com>

	* modules/poll: Add BUILT_SOURCES.
	Prefer "$@" to "poll.h" in rule for building poll.h.
	All this is for consistency with alloca and fnmatch.

	* modules/same: Depend on stdbool.

2003-12-03  Bruno Haible  <bruno@clisp.org>

	Upgrade from gettext-0.13.
	* modules/gettext (Files): Add m4/intmax.m4, m4/longdouble.m4,
	m4/longlong.m4, m4/printf-posix.m4, m4/signed.m4, m4/size_max.m4,
	m4/wchar_t.m4, m4/wint_t.m4, m4/xsize.m4.

2003-11-25  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf (Files): Remove m4/ssize_t.m4.

2003-11-24  Paul Eggert  <eggert@twinsun.com>

	* modules/alloca: Remove dependency on xalloc.

2003-11-17  Paul Eggert  <eggert@twinsun.com>

	* README: Mention that S+T cannot overflow if S is the size of
	an existing object and T is sufficiently small.

2003-11-17  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf (Files): Add m4/ssize_t.m4.
	(Depends-on): Add xsize.

2003-11-12  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc (Files): Undo latest change, since xalloc.h
	no longer needs SIZE_MAX or PTRDIFF_MAX.

2003-11-11  Bruno Haible  <bruno@clisp.org>

	* modules/xsize (Files): Add m4/size_max.m4.
	* modules/xalloc (Files): Add m4/size_max.m4, m4/ptrdiff_max.m4.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* modules/xsize: New file.
	* modules/linebreak: Depend on xsize.