@@ -1,0 +1,30 @@
+Description:
+Creation of autonomous subprocesses.
+
+Files:
+lib/execute.h
+lib/execute.c
+lib/w32spawn.h
+m4/execute.m4
+
+Depends-on:
+error
+exit
+fatal-signal
+wait-process
+gettext
+stdbool
+strpbrk
+
+configure.ac:
+gl_EXECUTE
+
+Makefile.am:
+lib_SOURCES += execute.h execute.c w32spawn.h
+
+Include:
+"execute.h"
+
+Maintainer:
+Bruno Haible
+
