@@ -1,3 +1,7 @@
+2004-01-27  Bruno Haible  <bruno@clisp.org>
+
+	* execute.m4: New file, from GNU gettext.
+
 2003-11-24  Bruno Haible  <bruno@clisp.org>
 
 	* allocsa.m4: New file, from GNU gettext.
